--- a/_includes/ion-tab.html
+++ b/_includes/ion-tab.html
@@ -1,11 +1,12 @@
 
 </ion-content>
+</ion-tab>
 <ion-tab-bar slot="bottom">
     <ion-tab-button {% if page.url == '/' %}tab="home"{% endif %} href="/" onclick="Tungguan()">
       <ion-label>Dashboard</ion-label>
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button {% if page.url == '/recharge' %}tab="wifi"{% endif %} href="/recharge" onclick="Tungguan()">
+    <ion-tab-button {% if page.url == '/recharge' %}tab="recharge"{% endif %} href="/recharge" onclick="Tungguan()">
       <ion-label>Topup</ion-label>
       <ion-icon name="wifi"></ion-icon>
     </ion-tab-button>
