--- a/_includes/table-list.html
+++ b/_includes/table-list.html
@@ -32,7 +32,7 @@
         <ion-list class="table-panel-body table-responsive">
             <ion-item>
               <ion-avatar slot="start">
-                <img src="https://ionicframework.com/docs/demos/api/avatar/avatar.svg" />
+                <img src="{{site.avatar}}" />
               </ion-avatar>
               <ion-label>
                 <h3>Admin berhasil login</h3>
