--- a/_includes/box-card.html
+++ b/_includes/box-card.html
@@ -1,5 +1,5 @@
 <div class="box-card">
-    <ion-card color="success" class="flex-between pr-14 pointer">
+    <ion-card color="success" class="flex-between tri-D pr-14 pointer" data-tilt data-tilt-max="35" data-tilt-speed="400" data-tilt-glare="true" data-tilt-gyroscope="true">
         <ion-card-content>
           <ion-card-title class="fs-20">Pendapatan<br/>Hari ini</ion-card-title>
           <ion-card-subtitle class="fs-18 bold">Rp. 100.000</ion-card-subtitle>
@@ -7,7 +7,7 @@
         <ion-icon class="box-icon" name="cash"></ion-icon>
       </ion-card>
 
-      <ion-card color="warning" class="flex-between pr-14 pointer">
+      <ion-card color="primary" class="flex-between tri-D pr-14 pointer" data-tilt data-tilt-max="35" data-tilt-speed="400" data-tilt-glare="true" data-tilt-gyroscope="true">
         <ion-card-content>
           <ion-card-title class="fs-20">Pendapatan<br/>Bulan ini</ion-card-title>
           <ion-card-subtitle class="fs-18 bold">Rp. 1.000.000</ion-card-subtitle>
@@ -15,7 +15,7 @@
         <ion-icon class="box-icon" name="wallet"></ion-icon>
         </ion-card>
 
-        <ion-card color="danger" class="flex-between pr-14 pointer">
+        <ion-card color="danger" class="flex-between tri-D pr-14 pointer" data-tilt data-tilt-max="35" data-tilt-speed="400" data-tilt-glare="true" data-tilt-gyroscope="true">
             <ion-card-content>
               <ion-card-title class="fs-20">Member hotspot<br/>Terdaftar</ion-card-title>
               <ion-card-subtitle class="fs-18 bold">100 Org</ion-card-subtitle>
