--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,5 +9,6 @@
         {% include ion-tab.html %}
     {% include analytics.html %}
   </ion-app>
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vanilla-tilt.min.js"></script>
   </body>
 </html>
